# HACKTHON-II-Todo-APP

./: README.md
PHASE-I-CLI-Todo-app/: PUBLISHING_GUIDE.md  README.md  prompt.md  pyproject.toml
PHASE-I-CLI-Todo-app/history/prompts/001-cli-todo-app/: 006-add-update-delete-features.green.prompt.md  007-commit-and-push-changes.misc.prompt.md
PHASE-I-CLI-Todo-app/specs/001-cli-todo-app/: plan.md  quickstart.md  spec.md
PHASE-I-CLI-Todo-app/src/: __init__.py  main.py  todo.py
PHASE-II-nextjs-app/: package-lock.json
PHASE-II-nextjs-app/backend/: .env  .gitignore  README.md  backend_detail.md  prompt.md  railway.json  requirements.txt  test.db
PHASE-II-nextjs-app/backend/.specify/memory/: constitution.md
PHASE-II-nextjs-app/backend/specs/001-phase2-todo-backend/: plan.md  spec.md  tasks.md
PHASE-II-nextjs-app/backend/specs/002-phase3-agent/: plan.md  spec.md  tasks.md
PHASE-II-nextjs-app/backend/src/: database.py  main.py  models.py
PHASE-II-nextjs-app/backend/src/agent/: models.py  processor.py
PHASE-II-nextjs-app/backend/tests/: test_agent_api.py  test_agent_skills.py
PHASE-II-nextjs-app/frontend/: feature_paths.json  propmt.md
PHASE-II-nextjs-app/frontend/app/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
PHASE-II-nextjs-app/frontend/frontend-app/: README.md  package-lock.json  package.json
PHASE-II-nextjs-app/frontend/history/: 2026-01-13-feature-enhancements.md
history/prompts/001-phase2-todo-backend/: 002-create-phase-ii-backend-specification.spec.prompt.md
(+81 files in other folders)
